--- a/layouts/partials/utils/get-link.html
+++ b/layouts/partials/utils/get-link.html
@@ -14,6 +14,9 @@ Use:
 
 {{- $context := .context -}}
 {{- $url := .url -}}
+{{- if not $url -}}
+  {{- return -}}
+{{- end -}}
 
 {{- $_link := $url -}}
 
