--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -20,7 +20,10 @@
 	position: relative;
 	border-radius: 9999999px;
 	border: 2px solid var(--cell-color);
-	padding: 5px 10px;
+	// padding: 5px 10px;
+	padding: 0px 10px;
+	// margin: 1em 1em;
+	font-size: 1.0rem;
 	color: var(--hover-color);
 	// padding: 1em;
 	// width: 30px;
