--- a/layouts/shortcodes/box_color.html
+++ b/layouts/shortcodes/box_color.html
@@ -32,4 +32,4 @@ Inside the tags I can write normal markdown code.
 {{- $css_style := printf "--custom-box-color-dark:%s; --custom-box-color-light: %s;" $dark_col $light_col -}}
 
 {{ $icon_arg := (or (.Get "icon") (.Get 0)) }}
-{{ partial "shortcodes_partials/box_text_wrapper_base" (dict "icon_arg" $icon_arg "default_icon" $DEFAULT_ICON "class" $CLASS "Inner" .Inner "style" $css_style) }}
+{{ partial "shortcodes_partials/box_text_wrapper_base" (dict "icon_arg" $icon_arg "default_icon" $DEFAULT_ICON "class" $CLASS "Inner" .Inner "style" $css_style "Page" .Page ) }}
