--- a/layouts/shortcodes/link_markdown_page.html
+++ b/layouts/shortcodes/link_markdown_page.html
@@ -1,3 +1,7 @@
+{{- /*  DEPRECATED   */ -}}
+{{- /*  DEPRECATED   */ -}}
+{{- /*  DEPRECATED   */ -}}
+{{- /*  DELETE Deprecated shortcode   */ -}}
 {{/*  Returns a <a> </a> tag with a link to a markdown page*/}}
 
 {{/*  USE EXAMPLE  */}}
