--- a/layouts/shortcodes/link_underline.html
+++ b/layouts/shortcodes/link_underline.html
@@ -13,6 +13,7 @@ Example:
 {{ $url := .Get 0 }}
 {{ $text := .Get 1 }}
 
+{{- $url = partial "utils/get-link.html" (dict "context" . "url" $url) -}}
 {{ $css_class := "link-underline" | safeHTML}}
 
 {{ if $text }}
