--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,9 +3,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ with .Title }}{{ . }} -{{ end }} {{ .Site.Title }}</title>
   <link rel="canonical" href="{{ .Permalink }}" />
-  <link rel="icon" type="image/svg+xml" href="{{ "favicon.svg" | relURL }}" />
-  <link rel="icon" type="image/png" href="{{ "favicon.png" | relURL }}" />
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "images/apple-touch-icon.png" | relURL }}" />
+  {{- /*  <link rel="icon" type="image/svg+xml" href="{{ "favicon.svg" | relURL }}" />  */ -}}
+  {{- /*  <link rel="icon" type="image/png" href="{{ "favicon.png" | relURL }}" />  */ -}}
+  {{- /*  <link rel="apple-touch-icon" sizes="180x180" href="{{ "images/apple-touch-icon.png" | relURL }}" />  */ -}}
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="/site.webmanifest" />
   <meta name="description" content="{{ with .Description }}{{ . | markdownify | plainify }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify | plainify }}{{ end }}{{ end }}" />
   {{/*  Keywords info (checks first in page. If not, get the site keywords)  */}}
   {{ if .Params.keywords }}
