footer-copyright align center

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1804,6 +1804,10 @@ nav.categories ul li a{
 	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
 }
 
+.footer-copyright{
+	text-align: center;
+}
+
 #tags-footer{
 	display: none;
 	margin-left: 20px;
