--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   {{ partialCached "social-icons.html" . }}
-  <section>
+  <section class="footer-copyright">
     © 
     {{ now.Format "2006" }}
     {{ .Site.Copyright }}.
